[package]
name = "pq-triple-ratchet"
version = "0.1.0"
edition = "2021"
authors = ["Paraxiom"]
license = "Apache-2.0"
description = "Post-quantum Triple Ratchet with ZK membership proofs for validator coordination"
repository = "https://github.com/QuantumVerseProtocols/quantumharmony"

[dependencies]
# ═══════════════════════════════════════════════════════════════
# POST-QUANTUM KEY ENCAPSULATION (for key exchange)
# ═══════════════════════════════════════════════════════════════
ml-kem = "0.2"  # NIST ML-KEM-768 (formerly Kyber)
kem = "0.3.0-pre.0"  # KEM trait for encapsulate/decapsulate

# ═══════════════════════════════════════════════════════════════
# POST-QUANTUM SIGNATURES (for authentication)
# ═══════════════════════════════════════════════════════════════
pqcrypto-sphincsplus = "0.7"  # SPHINCS+-SHA2-256f
pqcrypto-traits = "0.3"

# ═══════════════════════════════════════════════════════════════
# ZERO-KNOWLEDGE PROOFS (for anonymous validator membership)
# ═══════════════════════════════════════════════════════════════
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-bls12-381 = "0.4"        # Pairing-friendly curve for ZK-SNARKs
ark-groth16 = "0.4"          # Groth16 proving system
ark-relations = "0.4"        # R1CS constraint system
ark-r1cs-std = "0.4"         # Standard R1CS gadgets
ark-crypto-primitives = "0.4" # Merkle trees, signatures, commitments

# ═══════════════════════════════════════════════════════════════
# CLASSICAL CRYPTO (hybrid mode - defense in depth)
# ═══════════════════════════════════════════════════════════════
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# ═══════════════════════════════════════════════════════════════
# SYMMETRIC ENCRYPTION
# ═══════════════════════════════════════════════════════════════
chacha20poly1305 = "0.10"    # AEAD cipher
hkdf = "0.12"                # Key derivation
sha2 = "0.10"                # SHA-256/512
sha3 = "0.10"                # SHA3/SHAKE (for SPHINCS+)
hmac = "0.12"                # HMAC for ratchet

# ═══════════════════════════════════════════════════════════════
# UTILITIES
# ═══════════════════════════════════════════════════════════════
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"              # Efficient serialization
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12"         # Fast RwLock for state

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[features]
default = ["std"]
std = []
# Enable ZK proofs (adds ~2MB to binary, slower builds)
zk-membership = []
