[package]
name = "qkd-client"
version = "0.1.0"
edition = "2021"
authors = ["Paraxiom <your-email@example.com>"]
description = "QKD client for Quantum Harmony blockchain"

[dependencies]
# Substrate dependencies
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

# For random number generation in std environments (for testing)
rand = { version = "0.8", optional = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "rand",
]
