[package]
name = "pallet-relay-coordination"
version = "0.1.0"
edition = "2021"
authors = ["QuantumHarmony Team"]
description = "Pallet for coordinating QSSH relays between QKD islands"
license = "Apache-2.0"

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

# Needed for tests (mock runtime uses Balances for Currency)
pallet-balances = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "pallet-balances/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
