[package]
name = "pallet-ricardian-contracts"
version = "1.0.0"
description = "Ricardian contracts pallet for human+machine readable legal agreements on-chain"
authors = ["QuantumVerse Protocols"]
homepage = "https://quantumverse.io"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/quantumverse/quantumharmony"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
