[package]
name = "pallet-runtime-segmentation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Toroidal mesh runtime segmentation for parallel transaction processing"

[dependencies]
codec = { package = "parity-scale-codec", path = "/opt/parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true }
log = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
criterion = "0.5"

[[bench]]
name = "ternary_benchmark"
harness = false

[[bench]]
name = "encoding_benchmark"
harness = false

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
