[package]
name = "pallet-sphincs-keystore"
version = "0.1.0"
authors = ["Quantum Harmony Team"]
edition = "2021"
license = "Apache-2.0"
description = "Stores mapping from AccountId32 to full SPHINCS+ public keys (64 bytes)"

[dependencies]
codec = { package = "parity-scale-codec", path = "/opt/parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
