[package]
name = "pallet-topological-coherence"
version = "0.1.0"
description = "On-chain topological coherence validation for inference systems"
authors = ["Sylvain Cormier <sylvain@paraxiom.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Paraxiom/quantumharmony"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Core crate
topological-coherence = { workspace = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",
    "topological-coherence/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
