[package]
name = "pallet-validator-entropy"
version = "0.1.0"
edition = "2021"
authors = ["QuantumHarmony Team"]
description = "Pallet for registering validator entropy source configurations"
license = "Apache-2.0"

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
