[package]
name = "quantumharmony-runtime-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
# Substrate dependencies
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.2", default-features = false }
sp-keyring = { version = "39.0.0" }
codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }

# RPC and networking
jsonrpsee = { version = "0.24.5", features = ["client", "ws-client"] }
subxt = { version = "0.37.0", features = ["substrate-compat"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

# Utilities
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "runtime-upgrade"
path = "src/main.rs"
