[package]
name = "quantumharmony-wallet"
version = "0.1.0"
description = "QuantumHarmony Node Operator Dashboard"
authors = ["Paraxiom"]
license = "GPL-3.0-only"
repository = "https://github.com/QuantumVerseProtocols/quantumharmony"
edition = "2021"

[workspace]
# This empty workspace table prevents cargo from looking for parent workspace

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"
sp-core = { git = "https://github.com/Paraxiom/polkadot-sdk", branch = "daily/2025-10-16-sphincs-deterministic-keys" }
sp-runtime = { git = "https://github.com/Paraxiom/polkadot-sdk", branch = "daily/2025-10-16-sphincs-deterministic-keys" }
subxt = { version = "0.35", features = ["substrate-compat"] }
scale-codec = { package = "parity-scale-codec", git = "https://github.com/Paraxiom/parity-scale-codec", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
